--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.17.8
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
+  cloud_firestore: ^4.15.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
